:sparkles: Fonctionnel -Réception de fichiers -Stockage de fichier en local et dans la BDD -Renvoi des fichiers correspondant au code donné dans la requête -Création d'un service d'interaction avec un bucket (WIP)

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,7 +7,7 @@ index:
     resource: "../src/Controller/"
 api:
     prefix: "/api"
-    type: annotation
+    type: attribute
     resource: "../src/Controller/Api/"
 
 
