--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,12 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    upload_directory: '%kernel.project_dir%/public/uploads'
+    use_space: '%env(bool:DO_ACTIVE)%'
+    space_endpoint: '%env(DO_ENDPOINT)%'
+    space_name: '%env(DO_SPACE)%'
+    space_key: '%env(DO_KEY_ACCESS)%'
+    space_secret: '%env(DO_SECRET)%'
 
 services:
     # default configuration for services in *this* file
@@ -22,3 +28,14 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Service\Uploader:
+        arguments:
+            $uploadDirectory: '%upload_directory%'
+
+    App\Service\Ebisu:
+        arguments:
+            $endpoint: '%space_endpoint%'
+            $name: '%space_name%'
+            $key: '%space_key%'
+            $secret: '%space_secret%'
