--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-sodium": "*",
         "aws/aws-sdk-php": "^3.247",
         "cboden/ratchet": "^0.4.4",
         "doctrine/doctrine-bundle": "^2.7",
@@ -21,6 +22,7 @@
         "symfony/mime": "6.1.*",
         "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "6.1.*",
+        "symfony/twig-bundle": "6.1.*",
         "symfony/uid": "6.1.*",
         "symfony/yaml": "6.1.*"
     },
@@ -73,6 +75,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
+            "docker": true,
             "require": "6.1.*"
         }
     },
