--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   php:
+    container_name: musubi_app
     build:
       context: .
       target: app_php
@@ -9,31 +10,56 @@ services:
         SYMFONY_VERSION: ${SYMFONY_VERSION:-}
         STABILITY: ${STABILITY:-stable}
     restart: unless-stopped
+    ports:
+      - "9000:9000"
     volumes:
+      - ./:/srv/app
       - ./app:/var/run/php
     healthcheck:
       interval: 10s
       timeout: 3s
       retries: 3
       start_period: 30s
-#    environment:
+    networks:
+      - app-network
+      #    environment:
       # Run "composer require symfony/orm-pack" to install and configure Doctrine ORM
-#      DATABASE_URL: postgresql://${POSTGRES_USER:-app}:${POSTGRES_PASSWORD:-!ChangeMe!}@database:5432/${POSTGRES_DB:-app}?serverVersion=${POSTGRES_VERSION:-14}
-###> doctrine/doctrine-bundle ###
-#  database:
-#    image: postgres:${POSTGRES_VERSION:-14}-alpine
-#    environment:
-#      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-#      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-#      POSTGRES_USER: ${POSTGRES_USER:-app}
-#    volumes:
-#      - db-data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
+      #      DATABASE_URL: postgresql://${POSTGRES_USER:-app}:${POSTGRES_PASSWORD:-!ChangeMe!}@database:5432/${POSTGRES_DB:-app}?serverVersion=${POSTGRES_VERSION:-14}
+      ###> doctrine/doctrine-bundle ###
+
+  #Nginx Service
+  webserver:
+    image: nginx:alpine
+    container_name: webserver
+    restart: unless-stopped
+    tty: true
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./:/srv/app
+      - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
+    networks:
+      - app-network
+
+    #  database:
+    #    image: postgres:${POSTGRES_VERSION:-14}-alpine
+    #    environment:
+    #      POSTGRES_DB: ${POSTGRES_DB:-app}
+    # You should definitely change the password in production
+    #      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
+    #      POSTGRES_USER: ${POSTGRES_USER:-app}
+    #    volumes:
+    #      - db-data:/var/lib/postgresql/data:rw
+    # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
+    # - ./docker/db/data:/var/lib/postgresql/data:rw
 ###< doctrine/doctrine-bundle ###
 
 #volumes:
 ###> doctrine/doctrine-bundle ###
 #  db-data:
 ###< doctrine/doctrine-bundle ###
+
+#Docker Networks
+networks:
+  app-network:
