:bug: Interaction avec DO -Initialisation de la connexion au space -Renvoi d'une StreamedResponse au lieu d'une BinaryFileResponse pour les Spaces

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "symfony/runtime": "6.1.*",
         "symfony/twig-bundle": "6.1.*",
         "symfony/uid": "6.1.*",
-        "symfony/yaml": "6.1.*"
+        "symfony/yaml": "6.1.*",
+        "ext-curl": "*"
     },
     "config": {
         "allow-plugins": {
